fixed input overflow

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -61,7 +61,7 @@
           outline: none;
           font-weight: 100;
           color: $secondary;
-          min-height: 30px;
+          //   min-height: 30px;
 
           @media screen and (max-width: 600px) {
             min-height: auto;
